# notes-template

./: .gitignore
journal-automation/: Cargo.toml  README.md
journal-automation/schedules/: CS101.json  CS201.json  MATH231.json  PHYS211.json
journal-automation/src/: amazon.rs  cli.rs  journal.rs  main.rs  schedule.rs  utils.rs
